fix: properly configure overflow for ReactLenis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,14 +109,14 @@
   box-sizing: border-box;
 }
 
-html,
+html {
+  overflow-x: hidden;
+}
+
 body {
   width: 100%;
-  height: 100%;
   background-color: #000;
   color: var(--foreground);
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 img {
